# tokio-hang-reproduction

./: Cargo.toml
src/: main.rs
