[package]
name = "tokio-hang-reproduction"
version = "0.1.0"
authors = ["Bryan Burgers <bryan@burgers.io>"]
edition = "2018"

[dependencies]
futures = "0.3"
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime" }
serde_json = "1"
tokio = { version = "=0.2.13", features = ["time", "macros"] }
